Adding firebase data on the socket controller and created route to create new game

--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
     </div>
 
     <script>
-        var socket = io('localhost:3001');
-        var currTeam = 'A';
+        var socket = io('localhost:3001/cf228ac8-1791-4f8e-92fa-52928c169147');
+        var currTeam = 'Team A';
         var yourTeam = '';
 
         // SOCKET
