Added theme controller and setting led color on socketController

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <script>
-        var socket = io('https://tcc-unip.herokuapp.com/d23d087e-57ef-4ae4-954f-3c621b705897');
+        var socket = io('http://localhost:3000/f94427be-cd2e-4141-ae2f-addc7e7d4267');
         var currTeam = 'Team A';
         var yourTeam = '';
         var isTeacher = new URL(window.location).searchParams.get('isTeacher');
